# ML-Pipeline-Anomaly-Detection

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py  schemas.py
artifacts/models/_registry/: model_registry.json
configs/: active_model.yaml  database.yaml.example  drift_thresholds.yaml  model_config.yaml  source_extract.yaml
docker/: Dockerfile.api  Dockerfile.batch
docs/: architecture.md  data_contract.md  drift_monitoring.md  false_positive_false_negative_analysis.md  feature_engineering.md  inference_design.md  kubernetes_runtime_validation.md  latency_budget.md  model_lifecycle.md  rollback_runbook.md  source_integration.md
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
monitoring/: prometheus.yml
scripts/: benchmark_latency.py
sql/: create_feature_tables.sql  create_ml_schemas.sql  create_model_registry_tables.sql  create_monitoring_tables.sql  create_prediction_tables.sql  validation_queries.sql
src/anomaly_detection/: alerts.py  batch_inference.py  drift.py  evaluation.py  feature_builder.py  feature_validation.py  metrics.py  online_inference.py  prediction_logging.py  registry.py  rollback.py  source_extract.py  training.py  training_snapshot.py
tests/: test_alerts.py  test_api.py  test_batch_inference.py  test_drift.py  test_feature_validation.py  test_metrics.py  test_prediction_logging.py  test_registry.py  test_rollback.py  test_source_extract.py  test_training.py  test_training_snapshot.py
(+10 files in other folders)
