[project]
name = "project4-ml-pipeline-anomaly-detection"
version = "0.1.0"
description = "Production-style ML pipeline and anomaly detection platform with model versioning, drift checks, online/batch inference, monitoring, and rollback."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "HimanshuLabs" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "SIM"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
